[package]
name = "redash-utils"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Multiple utils"
repository = "https://github.com/JoValo/redash-utils"
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
